--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "scripts": {
     "start": "rollup -c rollup.config.js --watch",
     "test": "jest --coverage",
-    "build": "rollup -c rollup.config.js"
+    "build": "rollup -c rollup.config.js",
+    "bootstrap": "lerna bootstrap"
   },
   "keywords": [
     "react",
     "hooks",
-    "hamburger",
+    "burger",
     "menu",
     "react-component",
     "typescript"
@@ -47,6 +48,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.0",
     "jest": "^27.3.1",
+    "lerna": "^4.0.0",
     "postcss": "^8.3.11",
     "react-dom": "^17.0.2",
     "rollup-plugin-filesize": "^9.1.1",
