--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "jest": "^27.3.1",
     "lerna": "^4.0.0",
     "postcss": "^8.3.11",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -64,8 +64,8 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@douyinfe/semi-animation-react": "^2.0.8",
     "classnames": "^2.3.1",
-    "react": "^17.0.2"
+    "framer-motion": "^6.5.1",
+    "react": "^18.2.0"
   }
 }
