--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "keywords": [
     "react",
+    "reactjs",
     "hooks",
     "burger",
     "menu",
@@ -28,6 +29,9 @@
     "url": "https://github.com/perezpz/burger-menu"
   },
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/perezpz/burger-menu/issues"
+  },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
@@ -38,13 +42,12 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-image": "^2.1.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.34",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.3.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.0",
     "jest": "^27.3.1",
@@ -58,7 +61,6 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "sass": "^1.43.4",
-    "sinon": "^12.0.1",
     "ts-jest": "^27.0.7",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
