--- a/examples/package.json
+++ b/examples/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "burger-menu": "^2.0.0",
     "jsurl": "^0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
